--- a/squareAnimationSpeedDetection.html
+++ b/squareAnimationSpeedDetection.html
@@ -23,9 +23,11 @@
       var x = 225;
       var y = 225;
       dir = 0;
-      speed = 10;
+      speed = 5;
       var tx = 0;
       var ty = 0;
+      var wx = 200;
+      var wy = 200;
 
       window.requestAnimationFrame = (function () {
         return (
@@ -90,6 +92,27 @@
           ty = randomInteger(500);
         }
 
+        // if (x < wx + 250 && x + 50 > wx && y < wy + 20 && y + 50 > wy) {
+        //   // tx = randomInteger(500);
+        //   //ty = randomInteger(500);
+
+        //   if (dir == 1) {
+        //     y += speed;
+        //   }
+
+        //   if (dir == 2) {
+        //     y -= speed;
+        //   }
+
+        //   if (dir == 3) {
+        //     x -= speed;
+        //   }
+
+        //   if (dir == 4) {
+        //     x += speed;
+        //   }
+        // }
+
         paint();
         window.requestAnimationFrame(update);
       }
@@ -103,6 +126,9 @@
 
         ctx.fillStyle = "black";
         ctx.fillRect(tx, ty, 50, 50);
+
+        // ctx.fillStyle = "gray";
+        // ctx.fillRect(wx, wy, 250, 20);
       }
 
       update();
