--- a/squareAnimationSpeedDetection.html
+++ b/squareAnimationSpeedDetection.html
@@ -28,6 +28,48 @@
       var ty = 0;
       var wx = 200;
       var wy = 200;
+      let score = 0;
+      let walls = [];
+      let pause = false;
+
+      class Rectangle {
+        constructor(x, y, w, h, c) {
+          this.x = x;
+          this.y = y;
+          this.w = w;
+          this.h = h;
+          this.c = c;
+        }
+        paint(ctx) {
+          ctx.fillStyle = this.c;
+          ctx.fillRect(this.x, this.y, this.w, this.h);
+        }
+
+        seTocan(otro) {
+          if (
+            this.x < otro.x + otro.w &&
+            this.x + this.w > otro.x &&
+            this.y < otro.y + otro.h &&
+            this.y + this.h > otro.y
+          ) {
+            return true;
+          }
+          return false;
+        }
+      }
+      const player = new Rectangle(255, 255, 50, 50, "black");
+      const target = new Rectangle(
+        randomInteger(460),
+        randomInteger(46),
+        50,
+        50,
+        "black"
+      );
+
+      walls.push(new Rectangle(50, 160, 20, 190, "gray"));
+      walls.push(new Rectangle(430, 160, 20, 0, "gray"));
+      walls.push(new Rectangle(100, 410, 320, 30, "gray"));
+      walls.push(new Rectangle(100, 70, 320, 30, "gray"));
 
       window.requestAnimationFrame = (function () {
         return (
@@ -54,65 +96,77 @@
           dir = 4;
         }
         if (e.keyCode == 32) {
-          speed += 5;
+          //speed += 5;
+          pause = !pause;
         }
       });
 
       function update() {
-        if (dir == 1) {
-          y -= speed;
-          if (y + 50 < 0) {
-            y = 550;
+        if (!pause) {
+          if (dir == 1) {
+            player.y -= speed;
+            if (player.y + 50 < 0) {
+              player.y = 550;
+            }
           }
-        }
 
-        if (dir == 2) {
-          y += speed;
-          if (y + 50 > 500) {
-            y = -50;
+          if (dir == 2) {
+            player.y += speed;
+            if (player.y + 50 > 500) {
+              player.y = -50;
+            }
           }
-        }
 
-        if (dir == 3) {
-          x += speed;
-          if (x + 50 > 500) {
-            x = -50;
+          if (dir == 3) {
+            player.x += speed;
+            if (player.x + 50 > 500) {
+              player.x = -50;
+            }
           }
-        }
 
-        if (dir == 4) {
-          x -= speed;
-          if (x + 50 < 0) {
-            x = 550;
+          if (dir == 4) {
+            player.x -= speed;
+            if (player.x + 50 < 0) {
+              player.x = 550;
+            }
           }
-        }
+          if (player.seTocan(target)) {
+            target.x = randomInteger(460);
+            target.y = randomInteger(460);
+            score++;
+          }
 
-        if (x < tx + 20 && x + 50 > tx && y < ty + 20 && y + 50 > ty) {
-          tx = randomInteger(500);
-          ty = randomInteger(500);
-        }
+          for (var i = walls.length - 1; i >= 0; i--) {
+            if (player.seTocan(walls[i])) {
+              if (dir == 1) {
+                player.y += speed;
+              }
 
-        // if (x < wx + 250 && x + 50 > wx && y < wy + 20 && y + 50 > wy) {
-        //   // tx = randomInteger(500);
-        //   //ty = randomInteger(500);
+              if (dir == 2) {
+                player.y -= speed;
+              }
 
-        //   if (dir == 1) {
-        //     y += speed;
-        //   }
+              if (dir == 3) {
+                player.x -= speed;
+              }
 
-        //   if (dir == 2) {
-        //     y -= speed;
-        //   }
+              if (dir == 4) {
+                player.x += speed;
+              }
+              dir = 0;
+            }
+          }
 
-        //   if (dir == 3) {
-        //     x -= speed;
-        //   }
+          if (x < tx + 20 && x + 50 > tx && y < ty + 20 && y + 50 > ty) {
+            tx = randomInteger(500);
+            ty = randomInteger(500);
+          }
 
-        //   if (dir == 4) {
-        //     x += speed;
-        //   }
-        // }
-
+          // if (x < wx + 250 && x + 50 > wx && y < wy + 20 && y + 50 > wy) {
+          // tx = randomInteger(500);
+          //ty = randomInteger(500);
+          // }
+        } //this one for pause~~~~~~~~~~~~~~~~~~~
         paint();
         window.requestAnimationFrame(update);
       }
@@ -121,11 +175,30 @@
         ctx.fillStyle = "#D3F4F1";
         ctx.fillRect(0, 0, 500, 500);
 
-        ctx.fillStyle = randomRgbColor();
-        ctx.fillRect(x, y, 50, 50);
-
+        ctx.font = "27px Georgia";
         ctx.fillStyle = "black";
-        ctx.fillRect(tx, ty, 50, 50);
+        ctx.fillText("Score: " + score, 3, 22);
+
+        player.c = randomRgbColor();
+        player.paint(ctx);
+
+        target.paint(ctx);
+
+        for (let i = walls.length - 1; i >= 0; i--) {
+          walls[i].paint(ctx);
+        }
+
+        if (pause) {
+          ctx.font = "40px Georgia";
+          ctx.fillStyle = "black";
+          ctx.fillText("P A U S E", 185, 225);
+        }
+
+        // ctx.fillStyle = randomRgbColor();
+        // ctx.fillRect(x, y, 50, 50);
+
+        // ctx.fillStyle = "black";
+        // ctx.fillRect(tx, ty, 50, 50);
 
         // ctx.fillStyle = "gray";
         // ctx.fillRect(wx, wy, 250, 20);
