--- a/squareAnimationSpeedDetection.html
+++ b/squareAnimationSpeedDetection.html
@@ -31,6 +31,13 @@
       let score = 0;
       let walls = [];
       let pause = false;
+      let image = new Image();
+      let image2 = new Image();
+      let sonido = new Audio();
+
+      image.src = "peter.png";
+      image2.src = "BeerBottle.png";
+      sonido.src = "Stewie.mp3";
 
       class Rectangle {
         constructor(x, y, w, h, c) {
@@ -134,6 +141,7 @@
             target.x = randomInteger(460);
             target.y = randomInteger(460);
             score++;
+            sonido.play();
           }
 
           for (var i = walls.length - 1; i >= 0; i--) {
@@ -180,9 +188,10 @@
         ctx.fillText("Score: " + score, 3, 22);
 
         player.c = randomRgbColor();
-        player.paint(ctx);
-
-        target.paint(ctx);
+        // player.paint(ctx);
+        ctx.drawImage(image, player.x, player.y, 50, 50);
+        //target.paint(ctx);
+        ctx.drawImage(image2, target.x, target.y, 50, 50);
 
         for (let i = walls.length - 1; i >= 0; i--) {
           walls[i].paint(ctx);
